manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-application-deploy
  labels:
    app.kubernetes.io/name: my-application
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: my-application
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: my-application
    spec:
      containers:
      - name: my-application
        image: localhost:32000/service:1.0
        ports:
        - name: http
          containerPort: 5000
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 48Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
